@@ -61,6 +61,11 @@ public class GitContextMock implements GitContext {
   }
 
   @Override
+  public Path findGit() {
+    return null;
+  }
+
+  @Override
   public boolean fetchIfNeeded(Path repository, String remoteName, String branch) {
 
     return false;
