@@ -22,6 +22,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/1586[#1586]: Use BASH_PATH when set before searching in registry or PATH
 * https://github.com/devonfw/IDEasy/issues/1564[#1564]: Print path to git bash to IDEasy log
 * https://github.com/devonfw/IDEasy/issues/1561[#1561]: IDEasy can not handle BASH_PATH variable properly
+* https://github.com/devonfw/IDEasy/issues/1608[#1608]: Add git and bash location to status commandlet
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/37?closed=1[milestone 2025.11.001].
 
